--- a/Projectv2/Projectv2.vcxproj.filters
+++ b/Projectv2/Projectv2.vcxproj.filters
@@ -76,14 +76,24 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Shaders\color.hlsl">
-      <Filter>资源文件</Filter>
-    </FxCompile>
     <FxCompile Include="Shaders\Default.hlsl">
       <Filter>资源文件</Filter>
     </FxCompile>
     <FxCompile Include="Shaders\LightingUtil.hlsl">
       <Filter>资源文件</Filter>
     </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\model\f117.stl">
+      <Filter>资源文件</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\Textures\grass.dds">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\..\Textures\water1.dds">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
